tests/paczka1/small_fuzzy/99836714.err
Error in line 5: tg8r8OUn/S508/78,5
Error in line 10: tg8r8OUn S508 71,2
Error in line 1: HHahb A79 50,1
